# alpha-forge

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: cost_model.md  metrics.md  run_registry.md
src/app_logic/: assessment.py  portfolio.py
src/data/: adapter.py  snapshot.py
src/data/providers/: base.py  polygon_provider.py  yf_provider.py
src/engine/: __init__.py  backtest.py  backtest_pd.py  factor_telemetry.py  load_ic_artifacts.py  weekly.py  weights_and_attr.py
src/factors/: __init__.py  library.py
src/features/: momentum.py  quality.py  revisions.py
src/ledger/: alpha_ledger.py
src/metrics/: diagnostics.py  ic.py  perf.py
src/portfolio/: constraints.py  costs.py  governor.py
src/regime/: __init__.py  filters.py
src/signals/: orthogonalize.py  weighting.py
src/telemetry/: demo_run.py  hashing.py  run_registry.py
streamlit/: __init__.py  __main__.py
tests/: test_adapter_csv.py  test_alpha_ledger.py  test_backtest_engine.py  test_backtest_pd.py  test_backtest_pd_artifacts.py  test_constraints.py  test_costs.py  test_diagnostics_basic.py  test_factor_library.py  test_factor_telemetry_engine.py  test_features_basic.py  test_governor_basic.py  test_ic_math.py  test_metrics.py  test_orthogonalize_sector.py  test_provider_interface.py  test_regime_filters.py  test_run_registry.py  test_snapshot_io.py  test_weekly_engine.py  test_weighting.py  test_weights_and_attr.py
wheel/: __init__.py
wheel/bdist_wheel/: __init__.py
