[project]
name = "alpha-forge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "streamlit>=1.37",
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
