[tool.poetry]
name = "alpha-forge"
version = "0.1.0"
description = "An autonomous alpha-research lab (features → signals → portfolio → backtest → telemetry → explain)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
# Widen to accept Streamlit Cloud's Python 3.13.9
python = ">=3.10,<4.0"
# Keep runtime light for cloud
streamlit = "^1.37"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
# Scientific/dev-only stack (used locally or in CI, not required by Streamlit runtime)
pandas = "^2.0.0"
numpy = "^1.26"
scikit-learn = "^1.4"
statsmodels = "^0.14"
matplotlib = "^3.8"
scipy = "^1.11"
pytest = "^8.0"
ruff = "^0.6.0"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"