[metadata]
name = alpha-forge
version = 0.1.0
description = An autonomous alpha-research lab (features → signals → portfolio → backtest → telemetry → explain).
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    streamlit>=1.37
    pyyaml>=6.0

[options.packages.find]
where = src

[options.entry_points]
distutils.commands =
    bdist_wheel = wheel.bdist_wheel:bdist_wheel
